fixed alignment

--- a/website/styles/popup.css
+++ b/website/styles/popup.css
@@ -70,8 +70,6 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 .buttonD {
   position: relative;
-  display: flex;
-  justify-content: center;
   width:100%;
   max-width:100px;
 }
@@ -88,7 +86,7 @@ background-color:rgba(0,0,0,0.5);
 }
 
 .buttonD img {
-  display: flex;
+  display: block;
   justify-content: center;
 }
 
